--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -1,6 +1,6 @@
 [settings]
-default = bjweather.settings
+default = data_spiders.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = bjweather
+project = data_spiders
